remove search bar and fix spacing issue

--- a/app/assets/stylesheets/page-layout.scss
+++ b/app/assets/stylesheets/page-layout.scss
@@ -20,6 +20,7 @@
 
 #content-wrapper {
   width: 100%;
+  margin-top: 55px;
 }
 
 #app-body {
